# pocketpaw-

./: .gitignore  AGENTS.md  dev.sh  skills-lock.json  sync-skill.sh  tmp_cmd.sh
.agent/skills/create-worktree-skill/: SKILL.md
.agents/skills/extension-dev/: SKILL.md
.agents/workflows/: sync-upstream.md
.github/workflows/: release-desktop.yml
app-wrapper/: electron.vite.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
app-wrapper/scripts/: build-backend.js  build-backend.py  compile-bytecode.js
app-wrapper/src/main/: autostart.js  backend.js  index.js  security.js  tray.js
app-wrapper/src/preload/: index.js
app-wrapper/src/renderer/: index.html
client/: package-lock.json
docs/: docs-config.json
docs/advanced/: extensions-dev.mdx
docs/api/: delete-extension.mdx  post-extensions-upload.mdx
docs/concepts/: extensions.mdx
prd/prd-1.0.0/: PRD.md  README.md  ROADMAP.md
skills/extension-dev/: SKILL.md
skills/extension-dev/references/: api.md  chat-integration.md  daemon.md  manifest.md  (+5 more)
skills/secure-local-app/: SKILL.md
src/pocketpaw/: config.py  dashboard.py  dashboard_auth.py  dashboard_ws.py
src/pocketpaw/extensions/builtin/freecut/upstream/backend/: README.md  package.json  pyproject.toml
src/pocketpaw/extensions/builtin/freecut/upstream/backend/src/freecut_core/: __init__.py  audio.py  server.py  video.py
tests/: test_agent_loop.py  test_codex_cli_backend.py  test_commands.py  test_extension_override.py  test_extensions_platform.py
tests/e2e/: conftest.py  test_extensions_todo.py
workflows/: sync-upstream.md
(+223 files in other folders)
